--- a/src/components/Navbar.astro
+++ b/src/components/Navbar.astro
@@ -1,7 +1,7 @@
 <div class="w-100 py-3 bg-blue">
     <div class="container">
         <a href="/" class="text-decoration-none">
-            <h1 class="title-orange fw-bold m-0" style="font-size: 4rem">TAM 2xx References</h1>
+            <h1 class="title-orange fw-bold m-0" style="font-size: 4rem">Mechanics Reference</h1>
         </a>
     </div>
 </div>
@@ -17,15 +17,15 @@
                 </li>
                 <div class="vr d-none d-sm-block" style="color: white;"></div>
                 <li class="nav-item">
-                    <a class="nav-link active text-white py-1" href="/sta">Statics (210/211)</a>
+                    <a class="nav-link active text-white py-1" href="/sta">Statics</a>
                 </li>
                 <div class="vr d-none d-sm-block" style="color: white;"></div>
                 <li class="nav-item">
-                    <a class="nav-link active text-white py-1" href="/dyn">Dynamics (212)</a>
+                    <a class="nav-link active text-white py-1" href="/dyn">Dynamics</a>
                 </li>
                 <div class="vr d-none d-sm-block" style="color: white;"></div>
                 <li class="nav-item">
-                    <a class="nav-link active text-white py-1" href="/sol">Solid Mechanics (251)</a>
+                    <a class="nav-link active text-white py-1" href="/sol">Solid Mechanics</a>
                 </li>
                 <div class="vr d-none d-sm-block" style="color: white;"></div>
             </ul>
