--- a/src/pages/dyn/vector_calculus.astro
+++ b/src/pages/dyn/vector_calculus.astro
@@ -343,7 +343,7 @@ import Col from "../../components/Col.astro"
       <Row>
         <Col values="12">
           <div class="d-flex">
-            <p class="m-0 flex-shrink-1">Increment:<p>
+            <p class="m-0 flex-shrink-1">Increment:</p>
             <div class="flex-grow-1 d-flex align-items-baseline"> 
               <input type="range" min="0" max="4" value="2" step="0.01" class="data-input:rvc-fd-c:dt flex-grow-1 mx-2" onchange="rvc_fd_c.setOption('dt', this.value); document.querySelector('span[class*=deltat]').innerText = this.value; console.log(this.value);" oninput="rvc_fd_c.setOption('dt', this.value); document.querySelector('span[class*=deltat]').innerText = this.value;"/>
             \(\Delta t = \) <span class="data-option:rvc-fd-c:deltat mx-2" >2</span> s
@@ -364,7 +364,7 @@ import Col from "../../components/Col.astro"
 
         <Col values="12">
           <div class="d-flex">
-            <p class="m-0 flex-shrink-1">Time:<p>
+            <p class="m-0 flex-shrink-1">Time:</p>
             <div class="flex-grow-1 d-flex align-items-baseline"> 
               <input type="range" min="0" max="10" value="0" step="0.01" class="data-input:rvc-fd-c:t flex-grow-1 mx-2" onchange="rvc_fd_c.setOption('t', this.value); document.querySelector('span[class*=t_step_fd]').innerText = this.value;" oninput="rvc_fd_c.setOption('t', this.value); document.querySelector('span[class*=t_step_fd]').innerText = this.value;"/>
               \(t = \) <span class="data-option:rvc-fd-c:t_step_fd mx-2">0</span> s
@@ -570,7 +570,7 @@ import Col from "../../components/Col.astro"
     </div>
     </PrairieDrawCanvas>
 
-     <Example title="Differentiating a vector function." >
+     <Example title="Differentiating a vector function." id="vcc-dvf">
         <p>
           The vector <InlineEquation equation="\\vec{r}(t)" /> is given by
 
@@ -592,10 +592,8 @@ import Col from "../../components/Col.astro"
     
 <SubSubSection title="Non-Cartesian: Polar basis">
 
-    </div>
-    </PrairieDrawCanvas>
 
-     <Example title="Differentiating a vector function." >
+     <Example title="Differentiating a vector function." id="vcc-dvf2">
         <p>
           The vector <InlineEquation equation="\\vec{r}(t)" /> is given by
 
@@ -621,17 +619,18 @@ import Col from "../../components/Col.astro"
 <SubSubSection title="Graphical estimation">
 
     <Image src="/Dynamics/VectorCalculusFigures/Graphical Estimation of Derivatives.png" width="7"> Taken from L03-Notes, slide 8.</Image>
+
 </SubSubSection>
 
-<SubSection title="Chain rule"></SubSection>
+<SubSection title="Chain rule">
     
- <p>
+  <p>
     Leibniz notation is very convenient for remembering the chain rule.  
     Consider the following examples of the chain rule in the two notations:
   </p>
-  <p>
+
     <DisplayEquation equation="\\begin{aligned}&amp;\\text{Newton:}&amp;\\dot{y}=y'(x)\\dot{x} \\\\      &amp;\\text{Leibniz:}&amp;\\frac{dy}{dt}=\\frac{dy}{dx}\\frac{dx}{dt}.\\end{aligned}" />
-  </p>
+
   <p>
     Notice how, with Leibniz notation, you can imagine the \(dx\)'s "cancelling 
     out" on the right-hand side, leaving you with \(dy/dt\).
@@ -640,42 +639,30 @@ import Col from "../../components/Col.astro"
     <p>
       The chain rule also applies to vector functions. This is
       helpful for parameterizing vectors in terms of arc-length
-          /(s/) or other quantities different than time /(t/).
+          \(s\) or other quantities different than time \(t\).
     </p>
        
-    <DisplayEquation title="Chain rule for vectors." background="True" equation="\[\frac{d}{dt} \vec{a} (s(t)) = \frac{d\vec{a}}{ds}(s(t)) \frac{ds}{dt}(t) = \frac{d\vec{a}}{ds} \dot{s}\]">
+    <DisplayEquation title="Chain rule for vectors." background="True" equation="\\frac{d}{dt} \\vec{a} (s(t)) = \\frac{d\\vec{a}}{ds}(s(t)) \\frac{ds}{dt}(t) = \\frac{d\\vec{a}}{ds} \\dot{s}" />
 
-    <Example title="Chain rule.">
+    <Example title="Chain rule." id="vcc-chr">
       <p>
-        A vector is defined in terms of an angle /(\\theta/) by /(\\vec{r}(\\theta) = \\cos\\theta\\,\\hat\\imath +
-                \\sin\\theta\\,\\hat\\jmath/). If the angle is given by /(\\theta(t) = t^3/), what is /(\\dot{\\vec{r}}/)?
+        A vector is defined in terms of an angle \(\theta\) by <InlineEquation equation="\\vec{r}(\\theta) = \\cos\\theta\\,\\hat\\imath + \\sin\\theta\\,\\hat\\jmath" />. If the angle is given by \(\theta(t) = t^3\), what is <InlineEquation equation="\\dot{\\vec{r}}" />?
       </p>
 
 
        <div slot="solution">
             <p>
              We can use the chain rule to compute:
-
-             <DisplayEquation equation="\frac{d}{dt} \vec{r} &= \frac{d}{d\theta} \vec{r} \frac{d}{dt} \theta \\
-                     &= \frac{d}{d\theta}\Big( \cos\theta\,\hat\imath
-                     + \sin\theta\,\hat\jmath \Big) \frac{d}{dt} (t^3) \\
-                     &= \Big( -\sin\theta\,\hat\imath +
-                     \cos\theta\,\hat\jmath \Big) (3 t^2) \\
-                     &= -3 t^2 \sin(t^3)\,\hat\imath + 3 t^2
-                     \cos(t^3)\,\hat\jmath">
-                </p>
+             <p>
+             <DisplayEquation equation="\frac{d}{dt} \vec{r} &= \frac{d}{d\theta} \vec{r} \frac{d}{dt} \theta \\ &= \frac{d}{d\theta}\Big( \cos\theta\,\hat\imath + \sin\theta\,\hat\jmath \Big) \frac{d}{dt} (t^3) \\ &= \Big( -\sin\theta\,\hat\imath + \cos\theta\,\hat\jmath \Big) (3 t^2) \\ &= -3 t^2 \sin(t^3)\,\hat\imath + 3 t^2 \cos(t^3)\,\hat\jmath" />
                 <p>
-                  Alternatively, we can evaluate $\vec{r}$ as a
-                  function of $t$ first and then differentiate it with
+                  Alternatively, we can evaluate <InlineEquation equation="\\vec{r}" /> as a
+                  function of \(t\) first and then differentiate it with
                   respect to time, using the scalar chain rule for
                   each component:
-
-                 <DisplayEquation equation=" \frac{d}{dt} \vec{r}
-                    &= \frac{d}{dt} \Big( \cos(t^3)\,\hat\imath +
-                    \sin(t^3)\,\hat\jmath \Big) \\
-                    &= -3 t^2 \sin(t^3)\,\hat\imath + 3 t^2
-                    \cos(t^3)\,\hat\jmath">
                 </p>
+                 <DisplayEquation equation=" \frac{d}{dt} \vec{r} &= \frac{d}{dt} \Big( \cos(t^3)\,\hat\imath + \sin(t^3)\,\hat\jmath \Big) \\ &= -3 t^2 \sin(t^3)\,\hat\imath + 3 t^2 \cos(t^3)\,\hat\jmath" />
+                
         </div>
     </Example>
 
@@ -687,23 +674,23 @@ import Col from "../../components/Col.astro"
 <p>
     Cartesian:
   </p>
-  <p>
+
     <DisplayEquation equation= "\\vec{v} = \\dot{x} \\hat\\imath + \\dot{y} \\hat\\jmath"/>
-  </p>
+
   <ul>
     <li>Integrate <InlineEquation equation="\\dot{x}" />  and <InlineEquation equation="\\dot{y}" /> to find \(x\) and \(y\). </li>
-  <ul>
-<p>
+  </ul>
+  <p>
     Polar:
   </p>
-  <p>
+
     <DisplayEquation equation= "\\vec{v} = \\dot{r} \\hat{e}_r + \\dot{r} \\dot{\\theta} \\hat{e}_\\theta"/>
-  </p>
+
 
 <ul>
    <li> Reduce <InlineEquation equation="\\dot{r} , r\\dot{\\theta}" />  to just <InlineEquation equation="\\dot{r}" /> and <InlineEquation equation="\\dot{\\theta}" /> before integrating. </li>
    <li> Integrate scalars <InlineEquation equation="(\\dot{r} , r\\dot{\\theta})" /> rather than vector <InlineEquation equation="\\vec{v}" />. </li>
-<ul>
+</ul>
  <p>
     Basic idea:
   </p>
