--- a/src/pages/sta/vectors_scalars.astro
+++ b/src/pages/sta/vectors_scalars.astro
@@ -7,6 +7,7 @@ import SubSubSection from "../../components/SubSubSection.astro"
 import BlueText from "../../components/BlueText.astro" 
 import RedText from "../../components/RedText.astro" 
 import DisplayEquation from "../../components/DisplayEquation.astro" 
+import InlineEquation from "../../components/InlineEquation.astro" 
 ---
 <Layout title="Vectors Scalars">
 <Section title="Vectors and Scalars"></Section>
