Course content page tweaks
Made simplified view the default, disabled switching to "fancy" view.

Added course title to page, as it isnt obvious which course we are currently viewing the pages for.

Made font bigger when on small screens as text was too small, leading to potential misclicks.

--- a/src/pages/[course].astro
+++ b/src/pages/[course].astro
@@ -22,5 +22,6 @@ const course_name = course_tags[course]
 ---
 
 <Layout title={course_name}>
+    <h1><strong>{course_tags[course]}</strong></h1>
     <CardGrid target_course={course_name}/>
 </Layout>
