--- a/src/pages/sol/axial_loading_t.astro
+++ b/src/pages/sol/axial_loading_t.astro
@@ -16,7 +16,7 @@ import DisplayEquation from "../../components/DisplayEquation.astro"
 
 <ul>
 <li> <strong>Displacement of points in space:</strong>  the movement of a point relative to its initial position in space (ex;  <InlineEquation equation="\\delta_B" /> )</li>
-<li><strong>Change in length of a segment:</strong>  the relative displacement of a point with respect to another point (ex;  <InlineEquation equation="\\delta_{B/A} = \\delta_B - \\delta_A = \\delta_1" /> ). This can be written multiple ways:
+<li><strong>Change in length of a segment:</strong>  the relastive displacement of a point with respect to another point (ex;  <InlineEquation equation="\\delta_{B/A} = \\delta_B - \\delta_A = \\delta_1" /> ). This can be written multiple ways:
      <DisplayEquation equation="\\delta_{AD} \\equiv \\delta_{DA} \\equiv \\delta_{A/D} \\equiv \\delta_{D/A}\\"></DisplayEquation></li>
 </ul>
 <strong>Sign Conventions for internal forces in a bar.</strong>
