--- a/src/pages/sta/introduction.astro
+++ b/src/pages/sta/introduction.astro
@@ -9,6 +9,7 @@ import BlueText from "../../components/BlueText.astro"
 import InlineEquation from "../../components/InlineEquation.astro" 
 import DisplayEquation from "../../components/DisplayEquation.astro" 
 import PrairieDrawCanvas from "../../components/PrairieDrawCanvas.astro"
+import DisplayTable from "../../components/DisplayTable.astro"
 ---
 <Layout title="Introduction">
 <Section title="Introduction to Statics"></Section>
@@ -73,11 +74,15 @@ In this course, we assume two things about particles:
 </SubSubSection>
 
 <SubSubSection title="Rigid Bodies">
-
+<p>
 For rigid bodies, we assume that the object has both mass (similar to particles) but also take its shape into account. 
+</p>
 
+<p>
 We call these bodies "rigid" because we assume that they do not deform under applied forces or moments. 
+</p>
 
+<p>
 A <em>rigid body</em> is an extended area of material that
           includes all the points inside it, and which moves so that
           the distances and angles between all its points remain
@@ -85,46 +90,45 @@ A <em>rigid body</em> is an extended area of material that
           the position of one point \(P\) inside it, together with the
           rotation angle of the body (one angle in 2D, three angles in
           3D).
-    <Center>
-        <table class="table table-responsive table-sm">
+</p>
+    <DisplayTable id="pos">
+        <thead>
             <tr>
-            <th></th>
-            <th>location description</th>
-            <th>velocity description</th>
+                <th></th>
+                <th>location description</th>
+                <th>velocity description</th>
+            <tr>
+        </thead>
+        <tbody>
+            <tr>
+                <th>point mass</th>
+                <td>position vector <InlineEquation equation="\\vec{r}_P" /></td>
+                <td>velocity vector <InlineEquation equation="\\vec{ v}_P" /></td>
             </tr>
             <tr>
-            <th>point mass</th>
-            <td>position vector <InlineEquation equation="\\vec{r}_P" /></td>
-            <td>velocity vector <InlineEquation equation="\\vec{v}_P" /></td>
+                <th>rigid body in 2D</th>
+                <td>
+                    <p class="m-0">position vector <InlineEquation equation="\\vec{r}_P" /></p>
+                    <p class="m-0">angle <InlineEquation equation="\\theta" /></p>
+                </td>
+                <td>
+                    <p class="m-0">velocity vector <InlineEquation equation="\\vec{v}_P"/></p>
+                    <p class="m-0">angular velocity <InlineEquation equation="\\omega" /></p>
+                </td>
             </tr>
             <tr>
-            <th>rigid body in 2D</th>
-            <td>
-                position vector <InlineEquation equation="\\vec{r}_P" />
-                <br />
-                angle <InlineEquation equation="\\theta" />
-            </td>
-            <td>
-                velocity vector <InlineEquation equation="\\vec{v}_P"/>
-                <br />
-                angular velocity <InlineEquation equation="\\omega" />
-            </td>
+                <th>rigid body in 3D</th>
+                <td>
+                    <p class="m-0">position vector <InlineEquation equation="\\vec{r}_P"/></p>
+                    <p class="m-0">angles <InlineEquation equation="\\theta,\\phi,\\psi"/></p>
+                </td>
+                <td>
+                    <p class="m-0">velocity vector <InlineEquation equation="\\vec{v}_P"/></p>
+                    <p class="m-0">angular velocity vector <InlineEquation equation="\\vec{\\omega}" /></p>
+                </td>
             </tr>
-            <tr>
-            <th>rigid body in 3D</th>
-            <td>
-                position vector <InlineEquation equation="\\vec{r}_P"/>
-                <br />
-                angles <InlineEquation equation="\\theta,\\phi,\\psi"/>
-            </td>
-            <td>
-                velocity vector <InlineEquation equation="\\vec{v}_P"/>
-                <br />
-                angular velocity vector <InlineEquation equation="\\vec{\\omega}" />
-            </td>
-            </tr>
-        </table>
-    </Center>
+        </tbody>
+    </DisplayTable>
 
     <p>
         Neither point masses nor rigid bodies can physically exist,
