Fixed links on dyn/vectors, added ids to some sections

--- a/src/components/CalloutCard.astro
+++ b/src/components/CalloutCard.astro
@@ -1,8 +1,8 @@
 ---
-const {title='Did you know?'} = Astro.props;
+const {title='Did you know?', id=""} = Astro.props;
 ---
 
-<div class="card w-100 p-2 mb-2" style="background: #e6f1f6;">
+<div class="card w-100 p-2 mb-2" style="background: #e6f1f6;" id={id}>
     <div class="card-title">
         <p class="fw-bold mb-1 h3">{title}</p>
     </div>
