--- a/src/components/SubSubSection.astro
+++ b/src/components/SubSubSection.astro
@@ -1,10 +1,10 @@
 ---
-const {title} = Astro.props;
+const {title, id=""} = Astro.props;
 ---
 
 <div class="callout-grid mt-3">
     <div class="w-100 px-0 pe-lg-2">
-        <h3 class="fw-bold text-center" set:html={title}></h3>
+        <h3 class="fw-bold text-center" set:html={title} id={id}></h3>
 
         <slot />
     </div>
