--- a/src/pages/dyn/vectors.astro
+++ b/src/pages/dyn/vectors.astro
@@ -128,7 +128,7 @@ import SubSubSubSection from "../../components/SubSubSubSection.astro"
     </Center>
 
     <CalloutContainer slot="cards">
-        <CalloutCard title="Notation note">
+        <CalloutCard title="Notation note" id="rvp-ic">
             <p>
                 When writing coordinates we can either list the coordinate
                 values explicitly, like \(x = 2\), \(y = 1\), or we can just
@@ -140,7 +140,7 @@ import SubSubSubSection from "../../components/SubSubSubSection.astro"
                 coordinate system we are using, and which order the
                 coordinates are in. We will typically write the coordinate
                 values explicitly to avoid confusion. This also applies to
-                <a href="rvv.html#rvv-ic">vector components</a>.
+                <a href="#rvv-ic">vector components</a>.
               </p>
         </CalloutCard>
 
@@ -194,8 +194,8 @@ import SubSubSubSection from "../../components/SubSubSubSection.astro"
 
     <p>
         The two common extensions of polar coordinates to 3D are
-        <a href="rvy.html">cylindrical coordinates</a> and <a
-        href="rvs.html">spherical coordinates</a>.
+        cylindrical coordinates and <a
+        href="#spherical_coords">spherical coordinates</a>.
       </p>
 
     <Center>
@@ -211,7 +211,7 @@ import SubSubSubSection from "../../components/SubSubSubSection.astro"
         To define polar coordinates, we relate them to another known
         coordinate system, typically Cartesian coordinates as
         follows, where we use the <a
-        href="rvp.html#rvp-it">atan2</a> function.
+        href="#rvp-it">atan2</a> function.
       </p>
 
     <DisplayEquation title="Conversion between polar and Cartesian coordinates" id="rvp-ep" equation = "\\begin{aligned}x &amp;= r \\cos\\theta&amp; r &amp;= \\sqrt{x^2 + y^2} \\\\y &amp;= r \\sin\\theta&amp; \\theta &amp;= \\operatorname{atan2}(y, x)\\end{aligned}" background="True"/>
@@ -241,7 +241,7 @@ import SubSubSubSection from "../../components/SubSubSubSection.astro"
               </p>
         </CalloutCard>
 
-        <CalloutCard title="Notation note">
+        <CalloutCard title="Notation note" id="rvp-it">
             <p>
                 When solving for \(\theta\) in terms of \(x\) and \(y\) we know
                 that \(\tan\theta = y / x\). However, this does not
@@ -373,7 +373,7 @@ import SubSubSubSection from "../../components/SubSubSubSection.astro"
     </Center>
 </SubSection>
 
-<SubSection title="Vectors bases">
+<SubSection title="Vector bases">
 
     <p>
       To describe vectors mathematically, we write them as a
@@ -427,9 +427,9 @@ import SubSubSubSection from "../../components/SubSubSubSection.astro"
     </Center>
 
     <CalloutContainer slot=cards>
-      <CalloutCard title="Notation note">
+      <CalloutCard title="Notation note" id="rvv-ic">
         <p>
-          Just <a href="rvp.html#rvp-ic">as for position
+          Just <a href="#rvp-ic">as for position
           coordinates</a>, we can write the vector components
           \(3\hat\imath + 2\hat\jmath\) as the ordered list \((3, 2)\)
           if we know which basis we are using. Because we often will
@@ -574,7 +574,7 @@ import SubSubSubSection from "../../components/SubSubSubSection.astro"
       <InlineEquation equation="\\hat{u},\\hat{v}" /> and then substitute the expressions.
     </p>
 
-    <Example id="rvv-xn" title="Example: Basis change." solution="False">
+    <Example id="rvv-xn" title="Basis change." solution="False">
       <p>
         For example, if we have <InlineEquation equation="\\vec{a} = 3\\,\\hat{\\imath} + 2\\,\\hat{\\jmath}" /> and we want to
         write this in the <InlineEquation equation="\\,\hat{u}, \,\hat{v}" /> basis,
@@ -851,7 +851,7 @@ import SubSubSubSection from "../../components/SubSubSubSection.astro"
 
       <p>
         We start with the dot product expression <a
-        href="rvv.html#rvv-ed">#rvv-ed</a> for length and
+        href="vector_calculus#rvv-el">#rvv-el</a> for length and
         differentiate it:
       </p>
       <DisplayEquation equation="\\begin{aligned} a &amp;= \\sqrt{\\vec{a} \\cdot        \\vec{a}} \\\\ \\frac{d}{dt} a &amp;= \\frac{d}{dt}        \\big( (\\vec{a} \\cdot \\vec{a})^{1/2}        \\big) \\\\ \\dot{a} &amp;= \\frac{1}{2} (\\vec{a}        \\cdot \\vec{a})^{-1/2} (\\dot{\\vec{a}}        \\cdot \\vec{a} + \\vec{a} \\cdot        \\dot{\\vec{a}}) \\\\ &amp;= \\frac{1}{2\\sqrt{a^2}}        (2 \\dot{\\vec{a}} \\cdot \\vec{a}) \\\\        &amp;= \\dot{\\vec{a}} \\cdot        \\hat{a}.\\end{aligned}" />
@@ -860,14 +860,14 @@ import SubSubSubSection from "../../components/SubSubSubSection.astro"
     <DisplayEquation title="Derivative of vector direction." background="True" id="rvc-eu" equation="\\dot{\\hat{a}} = \\frac{1}{a}\\operatorname{Comp}(\\dot{\\vec{a}}, \\vec{a})" derivation=True>
       <p>
         We take the definition <a
-        href="rvv.html#rvv-eu">#rvv-eu</a> for the unit vector
+        href="#rvv-eu">#rvv-eu</a> for the unit vector
         and differentiate it:
       </p>
       <p>
         <DisplayEquation equation="\\begin{aligned} \\hat{a} &amp;=        \\frac{\\vec{a}}{a} \\\\ \\frac{d}{dt} \\hat{a}        &amp;=        \\frac{d}{dt}\\left(\\frac{\\vec{a}}{a}\\right) \\\\        \\dot{\\hat{a}} &amp;= \\frac{\\dot{\\vec{a}} a -        \\vec{a} \\dot{a}}{a^2} \\\\ &amp;=        \\frac{\\dot{\\vec{a}}}{a} -        \\frac{\\dot{\\vec{a}} \\cdot \\hat{a}}{a^2}        \\vec{a} \\\\ &amp;= \\frac{1}{a} \\big(        \\dot{\\vec{a}} - (\\dot{\\vec{a}} \\cdot        \\hat{a}) \\hat{a} \\big)\\\\ &amp;= \\frac{1}{a}        \\operatorname{Comp}(\\dot{\\vec{a}},        \\vec{a}).\\end{aligned}" />
 
         Here we observed at the end that we had the expression
-        <a href="rvv.html#rvv-em">#rvv-em</a> for the
+        <a href="#rvv-em">#rvv-em</a> for the
         complementary projection of the derivative
         <InlineEquation equation="\\dot{\\vec{a}}" /> with respect to <InlineEquation equation="\\vec{a}" />  itself.
       </p>
@@ -884,14 +884,14 @@ import SubSubSubSection from "../../components/SubSubSubSection.astro"
         From <a href="#rvc-eu">#rvc-eu</a> we know that
         <InlineEquation equation="\\dot{\\hat{a}}" /> is in the direction of <InlineEquation equation="\\operatorname{Comp}(\\dot{\\vec{a}}, \\vec{a})" />
         , and from
-        <a href="rvv.html#rvv-er">#rvv-er</a> we know that this
+        <a href="#rvv-er">#rvv-er</a> we know that this
         is orthogonal to <InlineEquation equation="\\vec{a}" /> (and also <InlineEquation equation="\\hat{a}" />).
       </p>
     </DisplayEquation>
 
     <p>
       Recall that we can always write a vector as the <a
-      href="rvv.html#rvv-ei">product of its length and
+      href="#rvv-ei">product of its length and
       direction</a>, so <InlineEquation equation="\\vec{a} = a \\hat{a}" />. This gives the
       following decomposition of the derivative of <InlineEquation equation="\\vec{a}" />.
     </p>
@@ -928,7 +928,7 @@ import SubSubSubSection from "../../components/SubSubSubSection.astro"
     </Center>
 </SubSection>
 
-<SubSection title="Spherical Coordinates">
+<SubSection title="Spherical Coordinates" id="spherical_coords">
 
     <p>
       The spherical coordinate system extends polar coordinates
@@ -1039,7 +1039,7 @@ import SubSubSubSection from "../../components/SubSubSubSection.astro"
     Spherical coordinates are defined with respect to a set of
     Cartesian coordinates, and can be converted to and from
     these coordinates using the <a
-    href="rvp.html#rvp-it">atan2</a> function as follows.
+    href="#rvp-it">atan2</a> function as follows.
   </p>
 
   <DisplayEquation title="Conversion between spherical and Cartesian coordinates." background="True" id="rvs-ec" equation="\\begin{aligned}x &amp;= r \\cos\\theta \\sin\\phi &amp; r &amp;= \\sqrt{x^2 + y^2 + z^2} \\\\y &amp;= r \\sin\\theta \\sin\\phi &amp; \\theta &amp;= \\operatorname{atan2}(y, x) \\\\z &amp;= r \\cos\\phi &amp; \\phi &amp;= \\operatorname{arccos}(z / r)\\end{aligned}" derivation=True>
@@ -1054,7 +1054,7 @@ import SubSubSubSection from "../../components/SubSubSubSection.astro"
           To convert from Cartesian coordinates, we use the same
           projection and read off the expressions for the
           spherical coordinates. This uses the <a
-          href="rvp.html#rvp-it">atan2</a> function to handle the
+          href="#rvp-it">atan2</a> function to handle the
           different quadrants for \(\theta\).
         </p>
       </Col>
@@ -1202,7 +1202,7 @@ import SubSubSubSection from "../../components/SubSubSubSection.astro"
 <CalloutContainer slot="cards">
       <CalloutCard title="Reference material">
         <ul>
-          <li><a href="rvv.html#rvv-xn">Changing basis</a></li>
+          <li><a href="#rvv-xn">Changing basis</a></li>
         </ul>
       </CalloutCard>
       <CalloutCard>
@@ -1250,7 +1250,7 @@ import SubSubSubSection from "../../components/SubSubSubSection.astro"
 
     <p>
       Geographic coordinates are typically given
-      in <a href="rvs.html">spherical coordinates</a>, but without
+      in <a href="#spherical_coords">spherical coordinates</a>, but without
       the radius and with the angles given
       in <a href="http://en.wikipedia.org/wiki/Arcminute">degrees,
       minutes, and seconds</a>, with the latitude first, and the
@@ -1272,7 +1272,7 @@ import SubSubSubSection from "../../components/SubSubSubSection.astro"
           <button class="option-toggle:aos-fm-c:showShortestPath mx-1" onclick="aos_fm_c.toggleOption('showShortestPath')">shortest path</button>
         </p>
         <p class="figureCaption">
-          Map of the Earth in an <a href="#aos-ip">equirectangular
+          Map of the Earth in an <a href="#">equirectangular
           projection</a>, showing two possible flight paths from
           Urbana, USA to Delhi, India.
         </p>
@@ -1282,8 +1282,8 @@ import SubSubSubSection from "../../components/SubSubSubSection.astro"
     <CalloutContainer slot="cards">
       <CalloutCard title="Reference material">
         <ul>
-          <li><a href="rvv.html#rvv-sd">Dot product</a></li>
-          <li><a href="rvs.html">Spherical coordinates</a></li>
+          <li><a href="vector_calculus#dot_product">Dot product</a></li>
+          <li><a href="#spherical_Coords">Spherical coordinates</a></li>
         </ul>
       </CalloutCard>
       <CalloutCard>
@@ -1312,14 +1312,14 @@ import SubSubSubSection from "../../components/SubSubSubSection.astro"
   <p>
     Finding the shortest distance between two points on the
     sphere is not a simple calculation given their latitude and
-    longitude. As <a href="#aos-sf">proved below</a>, the
+    longitude. As <a href="#">proved below</a>, the
     shortest path on the sphere is always a <i>great circle</i>,
     which is the intersection of the sphere with a plane through
     the origin. The shortest distance calculation thus reduces
     to finding the angle between the vectors <InlineEquation equation="\\vec{OA}" /> and
     <InlineEquation equation="\\vec{OB}" />, which can be easily done by finding their <a
-    href="rvv.html#rvv-sd">dot product</a> after changing them
-    to <a href="rvs.html#rvs-ec">rectangular coordinates</a>.
+    href="vector_calculus#dot_product">dot product</a> after changing them
+    to <a href="#rvs-ec">rectangular coordinates</a>.
   </p>
   <Center>
   <PrairieDrawCanvas id="aos-fd-c" width="600" height="600">
@@ -1380,7 +1380,7 @@ import SubSubSubSection from "../../components/SubSubSubSection.astro"
 </Center>
 
 <CalloutContainer slot="cards">
-  <CalloutCard title="Reference material">
+  <CalloutCard>
     <p>
       There are many different <a
       href="http://en.wikipedia.org/wiki/Map_projection">map
@@ -1434,7 +1434,7 @@ import SubSubSubSection from "../../components/SubSubSubSection.astro"
   <p>
     Given any two points <InlineEquation equation="A" /> and <InlineEquation equation="B" /> on the surface of the
     Earth, we choose coordinate axes and use <a
-    href="rvs.html">spherical coordinates</a> so that <InlineEquation equation="A" /> is at
+    href="#spherical_coords">spherical coordinates</a> so that <InlineEquation equation="A" /> is at
     <InlineEquation equation="(r = r_0, \\theta = 0, \\phi = \\pi - \\phi_0)" /> and <InlineEquation equation="B" /> is at
     <InlineEquation equation="(r = r_0, \\theta = 0, \\phi = \\pi + \\phi_0)" />. Here <InlineEquation equation="r_0" /> is
     the radius of the Earth and <InlineEquation equation="0 \\le \\phi_0 \\le \\pi/2" />. The
@@ -1459,14 +1459,14 @@ import SubSubSubSection from "../../components/SubSubSubSection.astro"
   </p>
   <p>
     To switch from rectangular to spherical coordinates we use
-    the <a href="rvs.html#rvs-ec">conversion</a>:
+    the <a href="#rvs-ec">conversion</a>:
   </p>
   <p>
     <DisplayEquation equation="\\begin{aligned}    x &amp;= r \\cos\\theta \\sin\\phi \\\\    y &amp;= r \\sin\\theta \\sin\\phi \\\\    z &amp;= r \\cos\\phi.    \\end{aligned}" />
   </p>
   <p>
     Differentiating these expressions and substituting (or using
-    the <a href="rvs.html#rvs-ep">spherical velocity
+    the <a href="#rvs-ep">spherical velocity
     expression</a>) gives the path length expression:
   </p>
   <p>
